--- a/RGMath/RGMath.vcxproj.filters
+++ b/RGMath/RGMath.vcxproj.filters
@@ -30,9 +30,12 @@
     <ClInclude Include="Vector\Vector3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Matrix\Matrix3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="RGMath.cpp">
+    <ClCompile Include="Test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
