--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-#file
-*.vs
+#dir
+.vs
 /Debug
 /Release
 /RasterGo/Debug
 /RasterGo/Release
 /RGMath/Debug
 /RGMath/Release
+
+#file
 *.dll
 *.exp
 *.ilk
